welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  return ado(a) + ado(b) + ado(c) + ado(d);
}
def ado(a: Int): Int {
   if (a >= 13 && a <= 19) {
     return 1
   } else {
     return 0
   }
}